# ethz_hpcse2

./: .gitignore  README.md
hw2/solution/p1/: Makefile  README  auxiliary.cpp  main.cpp  solution.cpp  wave.cpp  wave.h
hw2/solution/p2/: cannon.cpp
hw2/solution/p3/: particle.cpp
hw2/submission/p1/: auxiliary.cpp  main.cpp  wave.cpp  wave.h
hw2/submission/p2/: .gitignore  Makefile  README  cannon.cpp  modules.src
hw2/submission/p3/: particle  particle.cpp
hw3/solution/: Makefile  auxiliary.cpp  main.cpp  wave.cpp  wave.h
hw3/submission/: Makefile  README  auxiliary.cpp  hw3.src  main.cpp  wave.cpp  wave.h
hw4/solution/p1_p2/: Makefile  README  SSA_CPU.cpp  main_cmaes.cpp  main_ssa.cpp  modules.src  performance.sh
hw4/solution/p3/: Makefile  divideAndConquer.cpp  factor.h  producerConsumer.cpp
hw4/submission/: .gitignore
hw4/submission/p1_p2/: Makefile  README  SSA_CPU.cpp  main_cmaes.cpp  main_ssa.cpp
hw4/submission/p3/: divideAndConquer.cpp  plot.py  producerConsumer.cpp  sequential.cpp
hw5/solution/p1/: benchmarks_a.cu  benchmarks_b.cu  benchmarks_c.cu  utils.h
hw5/solution/p2/: Makefile  nbody_a.cu  nbody_b.cu  nbody_c.cu  nbody_d.cu  utils.h
hw5/solution/p3/: .gitignore  Makefile  electrostatics.cu  visualize.py
hw5/submission/p1/: .gitignore  Makefile  benchmarks_a.cu  benchmarks_b.cu  benchmarks_c.cu  utils.h
hw5/submission/p2/: .gitignore  main.cu  nbody_0.cu  nbody_a.cu  (+4 more)
hw6/solution/p2/: .gitignore  CMakeLists.txt  README.md
hw6/solution/p2/src/: argument_parser.h  kernels.cu  kernels.h  main.cpp  ssa.cu  ssa.h  test.h  utils.h
(+47 files in other folders)
